gtk+2.0 (2.16.1-2) UNRELEASED; urgency=low

  * Fix test-print-backend configure flag addition.

 -- Loic Minier <lool@dooz.org>  Tue, 14 Apr 2009 23:20:54 +0200

gtk+2.0 (2.16.1-1) experimental; urgency=low

  [ Loic Minier ]
  * Clarify dh_gtkmodules doc slightly.

  [ Gustavo Noronha Silva ]
  * debian/series:
  - forgot to add 022_disable-viqr-im-for-vi-locale.patch and
    061_use_pdf_as_default_printing_standard.patch to the series file
    (thanks to seb128 for noticing)
  * debian/control.in:
  - sync Replaces with ubuntu's package for easier migration from Ubuntu
    to Debian ;)

  [ Josselin Mouette ]
  * Make update-icon-caches always generate the cache, now that dh_icons
    is widespread.

  [ Sebastian Dröge ]
  * debian/libgtk-directfb-2.0-0.symbols,
    debian/libgtk2.0-0.symbols,
    debian/libgail18.symbols,
    debian/rules:
    + Add symbol files for GTK.

  [ Loic Minier ]
  * Merge the following changes by Emmet Hikory:

  [ Emmet Hikory ]
  * Port optimised flavor work by Loic Minier from pango1.0:
    - Rework flavor-specific vars.
      + Introduce $(flavor) which is set to $* to clarify implicit rules
      + Rename common_configure_flags to configure_flags
      + Introduce the flavor_get macro to use a flavor specific override or
        fallback to the common defaults for make vars.
      + Use $(call flavor_get, ) to retrieve configure_flags, CFLAGS, and
        LDFLAGS allowing to override these per flavor.
    - Add support for an optimised pass, implemented as a flavor
      + Define a default OPTLIBDIR and replace it in the sed foo for %.in
        files; this is like LIBDIR, but with some hwcaps extension, e.g.
        usr/lib/vfp.
      + Add vars to build an optimised vfp flavour for armel with
        additional CFLAGS
      + Add the "opt" special flavor to flavors to run the testuites on,
        CHECK_FLAVORS
      + Also sed and append %.opt after %.in when generating $ files from